--- a/airbnb.ipynb
+++ b/airbnb.ipynb
@@ -1136,12 +1136,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 181,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.05     40.0\n",
+       "0.25     69.0\n",
+       "0.50    105.0\n",
+       "0.75    175.0\n",
+       "Name: price, dtype: float64"
+      ]
+     },
+     "execution_count": 181,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# To be continued"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
