overview of the data

--- a/airbnb.ipynb
+++ b/airbnb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,18 +29,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "price_dataset = pd.read_csv(\"airbnb_price.csv\", index_col=\"listing_id\")\n",
-    "last_review = pd.read_csv(\"airbnb_last_review.csv\", parse_dates=True)\n",
-    "room_type = pd.read_excel(\"airbnb_room_type.xlsx\", index_col=\"listing_id\")"
+    "price_dataset = pd.read_csv(\"Datasets/airbnb_price.csv\", index_col=\"listing_id\")\n",
+    "last_review = pd.read_csv(\"Datasets/airbnb_last_review.csv\", parse_dates=True)\n",
+    "room_type = pd.read_excel(\"Datasets/airbnb_room_type.xlsx\", index_col=\"listing_id\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -49,7 +49,7 @@
        "Index([' listing_id', 'host_name', 'last_review'], dtype='object')"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "(25209, 2)"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "(25209, 2)"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +129,7 @@
        "(25209, 2)"
       ]
      },
-     "execution_count": 156,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +213,7 @@
        "5238               Cute & Cozy Lower East Side 1 bdrm  Entire home/apt"
       ]
      },
-     "execution_count": 157,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -408,7 +408,7 @@
        "6848        Allen & Irina  June 29 2019  "
       ]
      },
-     "execution_count": 158,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -427,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -442,7 +442,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 159,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -617,7 +617,7 @@
        "21733545    Sybilla Michelle  June 30 2019  "
       ]
      },
-     "execution_count": 160,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -630,7 +630,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -783,7 +783,7 @@
        "21901156       Private room       NaN  January 01 2019  "
       ]
      },
-     "execution_count": 161,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -802,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -817,7 +817,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 162,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -829,7 +829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 163,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
        "5238                Ben  June 09 2019  "
       ]
      },
-     "execution_count": 164,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -996,7 +996,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1032,7 +1032,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1108,7 +1108,7 @@
        "max     7500.000000"
       ]
      },
-     "execution_count": 166,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1127,7 +1127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1136,24 +1136,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.05     40.0\n",
-       "0.25     69.0\n",
-       "0.50    105.0\n",
-       "0.75    175.0\n",
-       "Name: price, dtype: float64"
-      ]
-     },
-     "execution_count": 181,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# To be continued"
    ]
