--- a/nyc_airbnb_analysis.ipynb
+++ b/nyc_airbnb_analysis.ipynb
@@ -1677,7 +1677,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### v.) Word Cloud"
+    "### v.) Word Cloud\n",
+    "- Using the wordcloud to identify the most prominent names or phrases used by hosts to name thier AirBnBs"
    ]
   },
   {
